<resources>
    <string name="app_name">MyBMI</string>
    <string name="text_operationExplanation">身長と体重を入力してください</string>
    <string name="text_inputView_title">入力</string>
    <string name="text_textHeight">身長</string>
    <string name="text_textWeight">体重</string>
    <string name="text_unitHeight">cm</string>
    <string name="text_unitWeight">kg</string>
    <string name="text_buttonBMICalculate">BMIを計算する</string>
    <string name="text_titleInputTab">入力</string>
    <string name="text_titleHistoryTab">履歴</string>
    <string name="text_buttonSave">保存する</string>
    <string name="text_buttonDelete">削除</string>
    <string name="text_textYourBMI1">あなたのBMIは</string>
    <string name="text_textYourBMI2">でした</string>
    <string name="text_defaultYurBMI">20.0</string>
    <string name="hint_inputExcuse">言い訳を書きたければ書いてください</string>
    <string name="text_labelDate">日</string>
    <string name="text_textBMI">BMI</string>
    <string name="text_Delimit">：</string>
    <string name="text_textMonth">月</string>
    <string name="text_historyView_title">履歴</string>

    <string name="alert_numberDecimalPlaces">身長、体重は小数点第一位まで入力可能です</string>
    <string name="alert_calculateBMI">身長、体重に数値を入力してください</string>
    <string name="alert_PleaseCalculateBMI">「BMIを計算する」ボタンを押してください</string>
</resources>
