<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/titleLine3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorDefault"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemExcuse" />

    <TextView
        android:id="@+id/itemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="10"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemHeight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="１８１"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/labelHeightDelimit"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/itemWeight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="８０"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/labelWeightDelimit"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/itemBMI"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="20.3"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/labelBMIDelimit"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/itemExcuse"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/itemDate"
        android:layout_marginTop="4dp"
        android:text="今日のご飯は、カレーライス、とんかつ、寿司、チャーハン、カレーライス！"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/itemDate"
        app:layout_constraintTop_toBottomOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/text_labelDate"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/itemDate"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/text_textHeight"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/itemDate"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelWeightUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_unitWeight"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/itemWeight"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelHeightUnit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_unitHeight"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/itemHeight"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="@string/text_textWeight"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/labelHeight"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/text_textBMI"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/labelWeight"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelHeightDelimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Delimit"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/labelHeight"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelWeightDelimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Delimit"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/labelWeight"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

    <TextView
        android:id="@+id/labelBMIDelimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Delimit"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/labelBMI"
        app:layout_constraintTop_toTopOf="@+id/itemDate" />

</androidx.constraintlayout.widget.ConstraintLayout>